# dpVision

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  dpVision.code-workspace
PluginManager/: CMakeLists.txt  CommonDLL.cpp  CommonDLL.h  Plugin.h  PluginManager.cpp
libs/Lidar/: CMakeLists.txt  Face4.h  LidarData.cpp  LidarData.h  LidarData.rc  afxres.h  resource.h  stdafx.h
libs/PolyVox/: CMakeLists.txt
libs/Volumetric/: CMakeLists.txt  ReadMe.txt  VolData.cpp  VolData.h  Volumetric.h  VolumetricData.cpp  VolumetricData.h  Voxel.cpp  Voxel.h  stdafx.cpp
libs/libE57/: CMakeLists.txt
libs/libICP/: CMakeLists.txt
plugins/: CMakeLists.txt
plugins/ParserDICOM/: CMakeLists.txt  ConcretePlugin.h  ParserDICOM.cpp  ParserDICOM.h  dicom2jpeg.cpp
plugins/ParserVRML/: ConcretePlugin.cpp  ConcretePlugin.h  ParserWRL.h  PluginDLL.cpp  PluginDLL.h  VRML_Appearance_Node.cpp  VRML_Color_Node.cpp  VRML_Coordinate_Node.cpp  VRML_IndexedFaceSet_Node.cpp  VRML_Material_Node.cpp  VRML_Transform_Node.cpp  VRML_color_Field.cpp  VRML_coordIndex_Field.cpp
plugins/Plugin2/: CMakeLists.txt  ConcretePlugin.cpp  ConcretePlugin.h  Plugin2.aps  PluginDLL.h
plugins/cutPlane/: CMakeLists.txt  ConcretePlugin.cpp  ConcretePlugin.h  MousePick.cpp  PluginDLL.h  stdafx.h
plugins/dpFotogrametria/: CMakeLists.txt  ConcretePlugin.cpp  ConcretePlugin.h  Fotogrametria.cpp  Fotogrametria.h  stdafx.h
plugins/example/: CMakeLists.txt  SamplePlugin.cpp  SamplePlugin.h
plugins/meshDistance/: CMakeLists.txt  ConcretePlugin.cpp  ConcretePlugin.h  KDTree.cpp  KDTree.h  MeshDistance.cpp  MeshDistance.h  RosettaCode.h  cuda1.cu
plugins/morphology/: CMakeLists.txt  ConcretePlugin.cpp  ConcretePlugin.h
plugins/parserDICOM/: ConcretePlugin.h  ParserDICOM.cpp  ParserDICOM.h  PluginDLL.h  dicom2jpeg.cpp
plugins/parserDP/: CMakeLists.txt  ConcretePlugin.cpp  ConcretePlugin.h  ParserATMDL.cpp  ParserATMDL.h  ParserLoaderTXT.cpp  ParserLoaderTXT.h  ParserM.cpp  ParserM.h  ParserPAT.cpp  ParserPAT.h  ParserPLY.cpp  ParserPLY.h  ParserPTS.cpp  ParserPTS.h  ParserTKD.cpp  ParserTKD.h  ParserTXT.cpp  ParserTXT.h  ParserVC2.cpp  ParserVC2.h  ParserVCN.cpp  ParserVCN.h  ParserXYB.cpp  ParserXYB.h  PluginDLL.h  TextFIleDialog.ui  TextFileDialog.cpp  TextFileDialog.h  TextFileDialogFieldType.h  stdafx.h
plugins/skladanie/: CMakeLists.txt  ConcretePlugin.cpp  ConcretePlugin.h  skladanie.vcxproj
plugins/testICP/: CMakeLists.txt  ConcretePlugin.cpp  ConcretePlugin.h  testICP.vcxproj
plugins/testy2/: CMakeLists.txt  ConcretePlugin.cpp  ConcretePlugin.h  testy2.vcxproj
src/: AP.cpp  AP.h  Animation.cpp  Animation.h  Annotation.cpp  Annotation.h  AnnotationBezier.h  AnnotationBoundVectors.cpp  AnnotationBoundVectors.h  AnnotationBox.h  AnnotationCamera.cpp  AnnotationCamera.h  AnnotationCurvatureMap.h  AnnotationCylinder.cpp  AnnotationCylinder.h  AnnotationEdges.h  AnnotationElasticPath.h  AnnotationPath.cpp  AnnotationPath.h  AnnotationPlane.h  AnnotationPodkowa.cpp  AnnotationPodkowa.cpp.1  AnnotationPodkowa.h  AnnotationPodkowa.h.1  AnnotationPoint.h  AnnotationPoints.cpp  AnnotationPoints.h  AnnotationPolygon.h  AnnotationPolygon2D.cpp  AnnotationPolygon2D.h  AnnotationPyramid.cpp  AnnotationPyramid.h  AnnotationSetOfCameras.h  AnnotationSetOfFaces.cpp  AnnotationSetOfFaces.h  AnnotationSetOfVertices.cpp  AnnotationSetOfVertices.h  AnnotationSphere.h  AnnotationTriangle.h  AnnotationTriple.h  (+249 more)
src/api/: AP.cpp  AP.h  CMakeLists.txt  UI.cpp  UI.h  old_api_AP.cpp  old_api_AP.h  old_api_UI.cpp
src/back/: GLViewer2.cpp  GLViewer2.h  GLViewer2_Pick.cpp  GLViewer2_Render.cpp  GLViewer2_StereoProjection.cpp  QTgui.rc  iQOpen.tlb
src/cmake/: ArchAndRuntime.cmake  Boost.cmake  Eigen3.cmake  QuaZip.cmake  QuaZip.cmake.back  Zlib.cmake  getOpenCV.cmake
src/core/: AP.cpp  AP.h  Annotation.cpp  Annotation.h  AnnotationBezier.cpp  AnnotationBezier.h  AnnotationBoundVectors.cpp  AnnotationBoundVectors.h  AnnotationBox.cpp  AnnotationBox.h  AnnotationCamera.cpp  AnnotationCamera.h  AnnotationCurvatureMap.cpp  AnnotationCurvatureMap.h  AnnotationCylinder.cpp  AnnotationCylinder.h  AnnotationEdges.cpp  AnnotationEdges.h  AnnotationElasticPath.cpp  AnnotationElasticPath.h  AnnotationPath.cpp  AnnotationPath.h  AnnotationPlane.cpp  AnnotationPlane.h  AnnotationPodkowa.cpp  AnnotationPodkowa.h  AnnotationPoint.cpp  AnnotationPoint.h  AnnotationPoints.cpp  AnnotationPoints.h  AnnotationPolygon.cpp  AnnotationPolygon.h  AnnotationPolygon2D.cpp  AnnotationPolygon2D.h  AnnotationPyramid.cpp  AnnotationPyramid.h  AnnotationSetOfCameras.cpp  AnnotationSetOfCameras.h  AnnotationSetOfFaces.cpp  AnnotationSetOfFaces.h  (+214 more)
src/gui/: CMakeLists.txt  CSpinBoxDelegate.cpp  ContextMenu.cpp  ContextMenu.h  DockWidgetHistogram.cpp  DockWidgetHistogram.h  DockWidgetImageViewer.cpp  DockWidgetImageViewer.h  DockWidgetLights.cpp  DockWidgetLights.h  DockWidgetModel.cpp  DockWidgetModel.h  DockWidgetPluginList.cpp  DockWidgetPluginList.h  DockWidgetPluginPanel.cpp  DockWidgetProperties.cpp  DockWidgetProperties.h  DockWidgetViewer.cpp  DockWidgetWorkspace.cpp  DockWidgetWorkspace.h  FlowLayout.h  GLViewer.cpp  GLViewer.h  GLViewer_Pick.cpp  GLViewer_Render.cpp  GraphEdge.h  GraphNode.cpp  GraphNode.h  GraphViewer.cpp  GraphViewer.h  ImageLabel.cpp  ImageLabel.h  MainApplication.cpp  MainApplication.h  MainWindow.cpp  MainWindow.h  MainWindow_Slots.cpp  MainWindow_TCP.cpp  MdiChild.cpp  PicViewer.cpp  (+57 more)
src/renderers/: CMakeLists.txt  IAnnotationBezierRenderer.cpp  IAnnotationBezierRenderer.h  IAnnotationBoundVectorsRenderer.cpp  IAnnotationBoundVectorsRenderer.h  IAnnotationBoxRenderer.cpp  IAnnotationBoxRenderer.h  IAnnotationCameraRenderer.cpp  IAnnotationCameraRenderer.h  IAnnotationCurvatureMapRenderer.cpp  IAnnotationCurvatureMapRenderer.h  IAnnotationCylinderRenderer.cpp  IAnnotationCylinderRenderer.h  IAnnotationEdgesRenderer.cpp  IAnnotationEdgesRenderer.h  IAnnotationElasticPathRenderer.cpp  IAnnotationElasticPathRenderer.h  IAnnotationPathRenderer.cpp  IAnnotationPathRenderer.h  IAnnotationPlaneRenderer.cpp  IAnnotationPlaneRenderer.h  (+56 more)
(+1518 files in other folders)
